syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Blank {}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CategoryList {
    repeated Category categories = 1;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message GetCategoryByIdRequest {
    string id = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category);
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList);
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category);
    rpc ListCategories(Blank) returns (CategoryList);
    rpc GetCategoryById(GetCategoryByIdRequest) returns (Category);
}
